What is new in Mentry 3.5?
--------------------------

1. Included the same version of the general mega-widget utility module
   "mwutil.tcl" as in Tablelist release 5.3.

2. Fixed a minor bug related to the handling of <Button-1> events.

What was new in Mentry 3.4?
---------------------------

The only changes contained in this release are a few adaptations made
necessary by submitting the package for inclusion in tklib (thanks to
Stuart Cassoff for his proposal and valuable assistance).

What was new in Mentry 3.3?
---------------------------

1. Added three new commands related to mentry widgets for IPv6
   addresses.

2. Support for Windows Vista (including explicit support for the "vista"
   theme).

3. Updated the support for the themes "plastik" and "keramik"; added
   support for the "keramik_alt" theme.

4. Included the same version of the general mega-widget utility module
   "mwutil.tcl" as in Tablelist release 4.12.

5. Minor improvements in the code.

What was new in Mentry 3.2?
---------------------------

1. New subcommands "adjustentry" and "setentryextrawidth", providing an
   easy way to set the optimal widths for the entry children.

2. Complemented the "attrib" subcommand with the new subcommands
   "hasattrib" and "unsetattrib".

3. Included a new mentry widget of type "DateTime" (thanks to Florian
   Murr for his proposal).

4. Added mouse wheel support for mentry widgets of types "Date", "Time",
   "DateTime", and "IPAddr".

5. Made sure that the default bindings are set up immediately when
   loading the package, prior to creating any mentry widget.

6. The "setThemeDefaults" command no longer throws an error if the
   current theme is not explicitly supported by Mentry.  Instead, it
   uses the options set by the current theme and falls back to the
   "default" one for the rest.

7. Included the same version of the general mega-widget utility module
   "mwutil.tcl" as in Tablelist release 4.10.
